--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,5 @@
-target/effective-pom/spring-boot-dependencies.xml
-# Created by .ignore support plugin (hsz.mobi)
-
-# IntelliJ project files
-.idea
-*.iml
-out
-gen
-
-# node.js dist
-/node_modules
-
-# Eclipse project files
-.classpath
+node_modules
+package-lock.json
+.DS_Store
 .project
-/.settings
-/**/.settings
-
-# Log files
-
-*.log
-
-dist
-target
-/.metadata/
+.idea
